--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
 
     <div id="loading">
+        <div id="status" style="margin-bottom: 20px; font-size: 14px; color: #666;">READY</div>
         <button id="start-btn" onclick="initApp()" style="padding:15px 45px; border-radius:30px; border:none; background:var(--accent); color:#fff; font-weight:bold; font-size:16px;">START PLAYER</button>
     </div>
 
@@ -52,18 +53,54 @@
         const sf2 = 'https://realist59.github.io/TG_GuitarPro/sound.sf2';
 
         function initApp() {
-            const el = document.getElementById('alphaTab');
-            api = new alphaTab.AlphaTabApi(el, {
-                player: { enablePlayer: true, soundFont: sf2 },
-                display: { layoutMode: 'fluid', upscale: 2 }
-            });
+            const status = document.getElementById('status');
+            const btn = document.getElementById('start-btn');
+            
+            btn.style.display = 'none';
+            status.innerText = "INITIALIZING ENGINE...";
 
-            new alphaTab.gui.backings.Fretboard(document.getElementById('fretboard'), api);
+            try {
+                const el = document.getElementById('alphaTab');
+                api = new alphaTab.AlphaTabApi(el, {
+                    player: { 
+                        enablePlayer: true, 
+                        soundFont: sf2,
+                        enableCursor: true 
+                    },
+                    display: { 
+                        layoutMode: 'fluid'
+                    }
+                });
 
-            api.soundFontLoaded.on(() => {
-                document.getElementById('loading').style.display = 'none';
-            });
+                new alphaTab.gui.backings.Fretboard(document.getElementById('fretboard'), api);
 
+                api.soundFontLoadStatus.on((args) => {
+                    const p = Math.floor((args.loaded / args.total) * 100);
+                    status.innerText = "LOADING SOUNDS: " + p + "%";
+                });
+
+                api.soundFontLoaded.on(() => {
+                    document.getElementById('loading').style.display = 'none';
+                });
+
+                // Force open if soundfont fails
+                setTimeout(() => {
+                    const loader = document.getElementById('loading');
+                    if(loader.style.display !== 'none') {
+                        loader.style.display = 'none';
+                        console.log("Forced start");
+                    }
+                }, 5000);
+
+                setupEvents();
+
+            } catch (e) {
+                status.innerText = "ERROR: " + e.message;
+                btn.style.display = 'block';
+            }
+        }
+
+        function setupEvents() {
             api.scoreLoaded.on(s => {
                 const sel = document.getElementById('track-list');
                 sel.innerHTML = s.tracks.map((t, i) => `<option value="${i}">${t.name || 'Track '+(i+1)}</option>`).join('');
@@ -74,15 +111,9 @@
                 document.getElementById('play-btn').innerText = api.playerState === 1 ? '⏸' : '▶';
             });
 
-            api.renderFinished.on(() => {
-                const loader = document.getElementById('loading');
-                if(loader.style.display !== 'none') loader.style.display = 'none';
-            });
-
             document.getElementById('file-input').onchange = async (e) => {
                 const file = e.target.files[0];
                 if (file) {
-                    document.getElementById('loading').style.display = 'flex';
                     const data = new Uint8Array(await file.arrayBuffer());
                     api.load(data);
                 }
@@ -98,22 +129,23 @@
         }
 
         function handlePlay() {
-            if (api.player.host && api.player.host.audioContext) api.player.host.audioContext.resume();
-            api.playPause();
+            if (api && api.player.host && api.player.host.audioContext) api.player.host.audioContext.resume();
+            if (api) api.playPause();
         }
 
         function toggleFret() {
             const f = document.getElementById('fretboard');
             f.style.display = f.style.display === 'block' ? 'none' : 'block';
-            api.render();
+            if (api) api.render();
         }
 
         function toggleMetro() {
+            if (!api) return;
             metro = !metro;
             api.settings.player.metronomeVolume = metro ? 1 : 0;
             api.updateSettings();
-            if(tg.HapticFeedback) tg.HapticFeedback.impactOccurred('light');
         }
     </script>
 </body>
 </html>
+
